<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.CategoryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txtJournalName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/scientific_journals"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/proxima_nova_bold" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerCategoryList"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/catgeogry_list_item"
        />
    <TextView
        android:id="@+id/txtCurrentIssueName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:paddingTop="15dp"
        android:text="@string/current_issue_highlights"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/proxima_nova_bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerHomeCurrentIssue"
        android:orientation="vertical"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/current_issue_item"
        tools:itemCount="4"
        tools:ignore="UnusedAttribute" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <TextView
        android:id="@+id/txtEmptyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:visibility="gone"
        android:textColor="@color/colorAccent"
        android:fontFamily="@font/proxima_nova_bold"
        android:gravity="center"
        android:text="@string/no_data_found"
        />
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:visibility="gone"
        tools:visibility="visible"
        />


</FrameLayout>